--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
-    "@mdx-js/loader": "^1.6.22",
+    "gray-matter": "^4.0.3",
     "next": "latest",
-    "prism-react-renderer": "^1.2.1",
+    "next-mdx-remote": "^3.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
