--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "latest",
     "next-mdx-remote": "^3.0.8",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.0",
