--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "framer-motion": "^5.5.5",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "next-mdx-remote": "^3.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sharp": "^0.29.3"
+    "sharp": "^0.29.3",
+    "swr": "^1.1.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.0",
