--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "cross-fetch": "^3.1.4",
     "framer-motion": "^5.5.5",
     "gray-matter": "^4.0.3",
     "next": "latest",
@@ -19,9 +21,13 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "autoprefixer": "^10.4.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "jest": "^27.4.5",
+    "msw": "^0.36.3",
     "postcss": "^8.4.4",
     "tailwindcss": "^3.0.0"
   }
