--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
@@ -29,6 +30,7 @@
     "eslint-config-next": "12.0.7",
     "jest": "^27.4.5",
     "msw": "^0.36.3",
+    "next-sitemap": "^1.6.203",
     "postcss": "^8.4.4",
     "tailwindcss": "^3.0.0"
   }
