--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  "name": "renatopozzi.me",
   "private": true,
+  "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -7,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
-    "test-ci": "jest"
+    "test-ci": "jest",
+    "semantic-release": "semantic-release"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
@@ -26,12 +29,40 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "autoprefixer": "^10.4.0",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "jest": "^27.4.5",
     "msw": "^0.36.3",
     "next-sitemap": "^1.6.203",
     "postcss": "^8.4.4",
+    "semantic-release": "18.0.1",
     "tailwindcss": "^3.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/itsrennyman/renatopozzi.me.git"
+  },
+  "author": "Renato <renato.pozzi.dev@gmail.com> (https://renatopozzi.me/)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/itsrennyman/renatopozzi.me/issues"
+  },
+  "release": {
+    "branches": [
+      {
+        "name": "main"
+      },
+      {
+        "name": "next",
+        "channel": "next",
+        "prerelease": "rc"
+      }
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
