--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,3 +24,15 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm run test-ci
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+      - run: npm ci
+      - run: npm run semantic-release
+        env:
+          GH_TOKEN: ${{secrets.GH_TOKEN}}
