--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-mdx-remote": "^3.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-syntax-highlighter": "15.4.5",
     "sharp": "^0.29.3",
     "swr": "^1.1.2"
   },
