--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
-    "test-ci": "jest",
+    "test-ci": "jest --passWithNoTests",
     "semantic-release": "semantic-release"
   },
   "dependencies": {
