--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@radix-ui/react-icons": "^1.0.3",
     "@stitches/react": "^1.2.6",
     "cross-fetch": "^3.1.4",
     "framer-motion": "^5.5.5",
