--- a/lib/data/projects.json
+++ b/lib/data/projects.json
@@ -2,11 +2,13 @@
   {
     "title": "Aurora",
     "description": "100% Cookie-Free Open Website Analytics. Collect Anonymous Data. Make your Audience Happy Now!",
-    "href": "https://useaurora.app"
+    "href": "https://useaurora.app",
+    "alt": "Aurora - Open Website Analytics"
   },
   {
     "title": "React Plock",
     "description": "Plock is a responsive masonry layout implementation for React that uses CSS Grid to layout your content.",
-    "href": "https://react-plock.netlify.com/"
+    "href": "https://react-plock.netlify.com/",
+    "alt": "React Plock - Responsive Masonry Layout"
   }
 ]
