--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.5",
     "@radix-ui/react-icons": "^1.0.3",
     "@stitches/react": "^1.2.6",
     "cross-fetch": "^3.1.4",
@@ -28,7 +27,6 @@
     "swr": "^1.1.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "autoprefixer": "^10.4.0",
@@ -39,8 +37,7 @@
     "msw": "^0.36.3",
     "next-sitemap": "^1.6.203",
     "postcss": "^8.4.4",
-    "semantic-release": "18.0.1",
-    "tailwindcss": "^3.0.0"
+    "semantic-release": "18.0.1"
   },
   "repository": {
     "type": "git",
