--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "cross-fetch": "^3.1.4",
     "framer-motion": "^5.5.5",
     "gray-matter": "^4.0.3",
-    "next": "latest",
-    "next-mdx-remote": "^3.0.8",
+    "next": "^12.1.0",
+    "next-mdx-remote": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-syntax-highlighter": "15.4.5",
