updated link to project

--- a/lib/data/projects.json
+++ b/lib/data/projects.json
@@ -2,7 +2,7 @@
   {
     "title": "Aurora",
     "description": "100% Cookie-Free Open Website Analytics. Collect Anonymous Data. Make your Audience Happy Now!",
-    "href": "https://useaurora.app",
+    "href": "https://github.com/itsrennyman/aurora",
     "alt": "Go To Aurora - Open Website Analytics"
   },
   {
