feat: newsletter module

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 TWITTER_USERNAME=
 UNSPLASH_ACCESS_KEY=
 ETHERSCAN_API_KEY=
-MAILCHIMP_API_KEY=
-MAILCHIMP_SERVER=
+BUTTONDOWN_API_KEY=
+NOTION_API_TOKEN=
+NOTION_DATABASE_ID=
