--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "renatopozzi.me",
   "private": true,
-  "version": "0.0.0-semantically-released",
+  "version": "0.0.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest --watch",
-    "test-ci": "jest --passWithNoTests",
-    "semantic-release": "semantic-release"
+    "lint": "next lint"
   },
   "dependencies": {
     "@notionhq/client": "^1.0.4",
@@ -31,14 +28,11 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "autoprefixer": "^10.4.0",
-    "cz-conventional-changelog": "3.3.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "jest": "^27.4.5",
-    "msw": "^0.36.3",
     "next-sitemap": "^1.6.203",
-    "postcss": "^8.4.4",
-    "semantic-release": "18.0.1"
+    "postcss": "^8.4.4"
   },
   "repository": {
     "type": "git",
@@ -48,22 +42,5 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/itsrennyman/renatopozzi.me/issues"
-  },
-  "release": {
-    "branches": [
-      {
-        "name": "main"
-      },
-      {
-        "name": "next",
-        "channel": "next",
-        "prerelease": "rc"
-      }
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   }
 }
