--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "jest": "^27.4.5",
     "next-sitemap": "^1.6.203",
-    "postcss": "^8.4.4"
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.2"
   },
   "repository": {
     "type": "git",
