--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "swr": "^1.1.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "autoprefixer": "^10.4.7",
