--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@markdoc/markdoc": "^0.1.2",
+    "@markdoc/next.js": "^0.1.4",
     "@notionhq/client": "^1.0.4",
     "@radix-ui/react-icons": "^1.0.3",
     "@stitches/react": "^1.2.6",
     "cross-fetch": "^3.1.4",
     "framer-motion": "^5.5.5",
     "gray-matter": "^4.0.3",
+    "js-yaml": "^4.1.0",
     "next": "^12.1.0",
     "next-mdx-remote": "^4.0.0",
     "react": "^17.0.2",
