--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "swr": "^1.1.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
