--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ ETHERSCAN_API_KEY=
 BUTTONDOWN_API_KEY=
 NOTION_API_TOKEN=
 NOTION_DATABASE_ID=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+NOTION_GUESTBOOK_DATABASE_ID=
