--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^5.5.5",
     "js-yaml": "^4.1.0",
     "next": "^12.1.0",
+    "next-auth": "^4.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-syntax-highlighter": "15.4.5",
